test/FAIL/dispcmd/invalid_arguments/08_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="not a <range>+"
#-------

load boucle.o
disp mem 0x1000:a
